# kate-proj2

./: Cargo.toml  Dockerfile  Makefile  README.md
.devcontainer/: devcontainer.json
src/: lib.rs  main.rs
